--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           fetch-depth: 0
           repository: SagerNet/sing-box
-          ref: main-next
+          ref: dev-next
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
@@ -51,10 +51,6 @@ jobs:
             goos: linux
             goarch: amd64
             goamd64: v1
-          - name: linux-amd64-v3
-            goos: linux
-            goarch: amd64
-            goamd64: v3
     runs-on: ubuntu-latest
     env:
       GOOS: ${{ matrix.goos }}
@@ -69,7 +65,7 @@ jobs:
         with:
           fetch-depth: 0
           repository: SagerNet/sing-box
-          ref: main-next
+          ref: dev-next
 
       - name: Setup Go
         uses: actions/setup-go@v5
