--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -232,7 +232,7 @@ jobs:
           goversion: ${{ env.MAIN_NEXT_GO_VERSION }} # Go 编译环境版本
           project_path: "./cmd/sing-box" # 在哪里运行 go build 命令。
           binary_name: "${{ env.BINARY }}" # 二进制名称
-          build_flags: "-trimpath -tags with_quic,with_grpc,with_dhcp,with_wireguard,with_ech,with_utls,with_reality_server,with_acme,with_clash_api,with_gvisor" # 传递给 go build 命令的其他参数
+          build_flags: "-trimpath -tags with_v2ray_api,with_quic,with_grpc,with_dhcp,with_wireguard,with_ech,with_utls,with_reality_server,with_acme,with_clash_api,with_gvisor" # 传递给 go build 命令的其他参数
           ldflags: -s -w --extldflags '-static -fpic' -X github.com/sagernet/sing-box/constant.Version=${{ env.VERSION }} # ldflags参数
           md5sum: "false"
           release_tag: "${{ env.VERSION }}" # 上传的标签
